# mobile_robot_receptionist

./: .gitignore  README.md  smrr.yml
button_localization/: setup.py
button_localization/button_localization/: button_detection.py  button_localization.py  line_estimation.py  package.xml  setup.cfg  setup.py  visualizer_node.py  yolo_node.py
button_localization/button_localization/button_localization/: button_detection.py  button_localization.py  line_estimation.py
button_localization/button_localization/config/: button_localization.rviz  elevator_interaction.yaml
button_localization/button_localization/include/: button_detection_utils.py  button_localization_utils.py
button_localization/button_localization/localization/: localization_calculations.ipynb
button_localization/config/: button_localization.rviz  elevator_interaction.yaml
button_localization/launch/: visualization.launch.py
elevator/: CMakeLists.txt  package.xml
elevator/launch/: gazebo_elevator.launch.py
elevator/src/: gz_cmd_pub.py
elevator/worlds/: elevator.world
gazebo_sfm_plugin-galactic/: CMakeLists.txt  package.xml
gazebo_sfm_plugin-galactic/include/gazebo_sfm_plugin/: PedestrianSFMPlugin.h
gazebo_sfm_plugin-galactic/launch/: launch_collision_box.launch.py  launch_gpu_sim.launch.py
gazebo_sfm_plugin-galactic/src/: PedestrianSFMPlugin.cpp  gazebo_ros_bridge_node.cpp
gazebo_sfm_plugin-galactic/worlds/: cafe3.world  empty_cafe.world  empty_file.world  no_roof_small_warehouse.world  small_house.world
goal_predictor/: package.xml  setup.cfg  setup.py
goal_predictor/goal_predictor/: crowd_flow_publisher.py  goal_predictor.py  goal_predictor.py.bak
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
smrr_base_controller/: CMakeLists.txt  package.xml  smrr_base_controller.xml
smrr_base_controller/firmware/: motor_control.ino
smrr_base_controller/launch/: hardware_interface.launch.py
smrr_base_controller/src/: base_controller.cpp
smrr_bringup/: CMakeLists.txt  package.xml
smrr_bringup/launch/: smrr.launch.py  smrr_sim.launch.py
smrr_controller/: CMakeLists.txt  package.xml
smrr_controller/config/: arm_controller.yaml  arm_controller.yaml_april12.bak  arm_controller2.yaml.bak  joy_teleop.yaml  mapper_params_online_async.yaml  twist_mux.yaml
smrr_controller/launch/: controller.launch.py  joystick_teleop.launch.py
smrr_crowd_nav/: package.xml  setup.cfg  setup.py
smrr_description/: CMakeLists.txt  package.xml
smrr_description/config/: joint_names_smrr_description.yaml
smrr_description/launch/: display.launch.py  gazebo.launch.py  gazebo_gpu.launch.py  multi_nav_gazebo.launch.py
smrr_description/meshes/: back_caster.STL  base_link.STL  bicep_r_link.STL  rplidar.stl
smrr_description/rviz/: display.rviz
smrr_description/urdf/: camera.urdf  gazebo_ros2_control.urdf  imu.urdf  lidar.urdf  smrr_description.urdf  smrr_ros2_control.urdf  transmission.urdf
smrr_elevator_behavior/: package.xml  setup.cfg  setup.py
smrr_elevator_behavior/config/: elevator_interaction.yaml
smrr_elevator_behavior/localization/: points.npy
smrr_elevator_behavior/smrr_elevator_behavior/: elevator_behavior.py
smrr_executions/: CMakeLists.txt  package.xml
smrr_executions/include/: pose_to_angle.hpp
smrr_executions/src/: arm_control_client.cpp  arm_control_server.cpp  move_pose.cpp  pose_to_angle.cpp
smrr_gui/: package.xml  setup.cfg  setup.py
smrr_gui/smrr_gui/: test1_gui.py  test2_gui.py  test3_gui.py
smrr_gui/smrr_gui/GUIs/: Ui_robot_gui.py  (+6 more)
smrr_hardware/: motor_testing.ino
smrr_interfaces/: CMakeLists.txt  package.xml
smrr_interfaces/action/: ArmControlServer.action
smrr_interfaces/msg/: Entities.msg
smrr_interfaces/srv/: ArmControl.srv  Pose.srv
smrr_localization/: CMakeLists.txt  package.xml
smrr_localization/config/: ekf.yaml  modified_ekf.yaml
smrr_localization/launch/: local_localization.launch.py
smrr_localization/maps/: BT_floor_01_closed.data  BT_floor_01_closed.pgm  BT_floor_01_closed.yaml  BT_floor_01_open.data  BT_floor_01_open.pgm  BT_floor_01_open.yaml  BT_floor_02_closed.data  BT_floor_02_closed.pgm  BT_floor_02_closed.yaml  BT_floor_02_open.data  BT_floor_02_open.pgm  BT_floor_02_open.yaml  BT_floor_03_closed.data  BT_floor_03_closed.pgm  BT_floor_03_closed.yaml  BT_floor_03_open.data  BT_floor_03_open.pgm  BT_floor_03_open.yaml  elevator.data  elevator.pgm  elevator.posegraph  floor03_1.pgm  floor05.data  floor05.pgm  floor6.data  floor6.pgm  level03.data  level03.pgm  my_map.pgm  my_map.yaml
smrr_localization/src/: imu_republisher.cpp
smrr_moveit/: CMakeLists.txt  package.xml
smrr_moveit/config/: chomp_planning.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  smrr.srdf
smrr_moveit/launch/: moveit.launch.py
smrr_multinav/: CMakeLists.txt  package.xml
smrr_multinav/bt_xml/: navigate_to_pose_w_replanning_and_recovery.xml  tree.xml
smrr_multinav/config/: locations.yaml  mapper_params_online_async.yaml  multinav.yaml  multinav_08_april.yaml.bak  multinav_dock_floor04.yaml  nav2_params.yaml  nav2_params.yaml.bak  nav2_params.yaml.normal.bak
smrr_multinav/config/backups/: mapper_params_online_async.yaml  multinav.yaml
smrr_multinav/include/smrr_multinav/: multinav.h  multinav_behaviors.h
smrr_multinav/launch/: multinav.launch.py  navigation_launch.py
smrr_multinav/src/: elevator_loading.cpp  multinav.cpp  multinav_behaviors.cpp
smrr_utilities/: package.xml  setup.cfg  setup.py
smrr_utilities/smrr_utilities/: template.py
(+46 files in other folders)
